--- a/assets/css/documenter_style.css
+++ b/assets/css/documenter_style.css
@@ -373,3 +373,12 @@ h1{
 		line-height:19px;
 	}
 }
+#documenter_content h1 {
+    font-size: 40px;
+    font-weight: 700;
+    box-shadow: 0px 2px 3px #ccc;
+    background: green;
+    padding: 7px;
+	color: #fff;
+	text-shadow: -2px 1px 0px #060606;
+}
